# poetry-localdep-issue-2

./: README.md
apps/app1/: pyproject.toml
libs/pkg1/: pyproject.toml
libs/pkg2/: pyproject.toml
