[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pkg1 = { git = "git@github.com:fiahil/poetry-localdep-issue-2.git", subdirectory = "libs/pkg1", rev = "9195b139eaedea7eb607195896425c03d13ff9fd" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
